--- a/sniffer/TODO
+++ b/sniffer/TODO
@@ -1,8 +1,16 @@
 TODO
 
-TimeSync
-- use better bt clock measurements
-- use nut millis from read bt clock call
-
 LEDs
 - replace CM blink by LEDs for sync pulse + received packet
+
+CODE
+- extract buffer handling (init: buffer count, buffer size)
+- extract BT/Nut clock sampling and conversion
+  - init: get X values
+  - updateBtNutClockConversion(periodidc)
+- add clock offset to contable ??
+- extract BT clock offset calculation (inc. inq)
+   - init
+   - inquiry: keep clock offset of neighbours 
+   - calc total clock offset
+- clean up time sync code / make re-usable
